# RustReactQuiz

./: README.md
api/: Cargo.toml  README.md
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20240524_034739_create_categories_table.rs  m20240524_035800_create_questions_table.rs  m20240524_063817_create_answers_table.rs
api/src/: catchers.rs  lib.rs  main.rs
api/src/entities/: answer.rs  category.rs  mod.rs  prelude.rs  question.rs
api/src/routes/: answers.rs  categories.rs  mod.rs  prelude.rs  questions.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: About.tsx  Footer.tsx  Navbar.tsx  Quiz.tsx
frontend/src/constants/: questions.ts
