[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"
rust-version = "1.74"

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", rev = "b3abc76", features = ["json"] }
rocket_cors = "0.5"
rocket_sync = "0.1.1"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde_json = "1.0.111"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "postgres", "runtime-tokio-native-tls"]

[dependencies.sea-orm-migration]
version = "1.0.0-rc.4"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[[bin]]
name = "entities"
path = "src/entities.rs"
